--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "cloudinary": "2.3.1",
+    "copy-to-clipboard": "3.3.3",
     "dotenv": "16.4.5",
     "next": "14.2.5",
     "next-cloudinary": "6.6.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
